// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Prompt correctly 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={200}
  contentLabel="prompt"
  isOpen={true}
  onRequestClose={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <div
    className="modal__top"
  >
    <h3
      className="modal__title"
    >
      prompt title
    </h3>
  </div>
  <div
    className="modal__body"
  >
    <p>
      test prompt
    </p>
  </div>
  <div
    className="modal_buttons"
  />
</Modal>
`;

exports[`should render Prompt with a single button 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={200}
  contentLabel="prompt"
  isOpen={true}
  onRequestClose={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <div
    className="modal__top"
  >
    <h3
      className="modal__title"
    >
      prompt title
    </h3>
  </div>
  <div
    className="modal__body"
  >
    <p>
      test prompt
    </p>
  </div>
  <div
    className="modal_buttons"
  >
    <button
      className="button"
      id="prompt-btn"
      key="button"
      onClick={[Function]}
    >
      button
    </button>
  </div>
</Modal>
`;
